==> netik/chibios-orchard/badge/mmc_kinetis_spi.c <==
#include "ch.h"
#include "hal.h"
#include "spi.h"
#include "pal.h"
#include "diskio.h"
#include "mmc.h"
#define CS_LOW()	palClearPad (GPIOB, 0);/* Set MMC_CS = low */
#define	CS_HIGH()	palSetPad (GPIOB, 0);	/* Set MMC_CS = high */
#define MMC_CD		1			/* Test if card detected.   yes:true, no:false, default:true */
#define MMC_WP		0			/* Test if write protected. yes:true, no:false, default:false */
#define	FCLK_SLOW()	SPID2.spi->BR = 0x35;	/* Set SPI slow clock (100-400kHz) */
#define	FCLK_FAST()	SPID2.spi->BR = 0;	/* Set SPI fast clock (20MHz max) */
#define CMD0	(0)		/* GO_IDLE_STATE */
#define CMD1	(1)		/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)		/* SEND_IF_COND */
#define CMD9	(9)		/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */
#define CMD25	(25)		/* WRITE_MULTIPLE_BLOCK */
#define CMD32	(32)		/* ERASE_ER_BLK_START */
#define CMD33	(33)		/* ERASE_ER_BLK_END */
#define CMD38	(38)		/* ERASE */
#define	CMD48	(48)		/* READ_EXTR_SINGLE */
#define	CMD49	(49)		/* WRITE_EXTR_SINGLE */
#define CMD55	(55)		/* APP_CMD */
#define CMD58	(58)		/* READ_OCR */

static
BYTE xchg_spi (		/* Returns received data */
	BYTE dat		/* Data to be sent */
)
{
	spiExchange (&SPID2, 1, &dat, &dat);
	return (dat);
}

static
void rcvr_spi_multi (
	BYTE *p,	/* Data read buffer */
	UINT cnt	/* Size of data block */
)
{
	spiReceive (&SPID2, cnt, p);
	return;
}

static
void xmit_spi_multi (
	const BYTE *p,	/* Data block to be sent */
	UINT cnt		/* Size of data block */
)
{
	spiSend (&SPID2, cnt, p);
	return;
}
