==> Alireza-Jahanbakhshi/Embedded/MicrochipTechnology/AVR_FW_ATmega_V1.0.0/ATmega16APU_DevBoard/Examples/SPI/SPI_SDCard/SPI_SDCard/mmc_avr_spi.c <==
#define F_CPU 8000000UL  // 8 MHz clock
#include <avr/io.h>
#include <avr/interrupt.h>
#include <util/delay.h>
#include "diskio.h"
#include "mmc_avr.h"
#define CS_LOW()    PORTD &= ~(1 << PD4)  /* Set MMC_CS = low (PD4) */
#define CS_HIGH()   PORTD |= (1 << PD4)   /* Set MMC_CS = high (PD4) */
#define MMC_CD      1                     /* Card detected: true */
#define MMC_WP      0                     /* Write protected: false */
#define FCLK_SLOW() SPCR |= (1 << SPR1) | (1 << SPR0)  /* SPI clock ~62.5 kHz (fosc/128) */
#define FCLK_FAST() SPCR &= ~((1 << SPR1) | (1 << SPR0))  /* SPI clock 2 MHz (fosc/4) */
#define CMD0    (0)
#define CMD1    (1)
#define ACMD41  (0x80+41)
#define CMD8    (8)
#define CMD9    (9)
#define CMD10   (10)
#define CMD12   (12)
#define ACMD13  (0x80+13)
#define CMD16   (16)
#define CMD17   (17)
#define CMD18   (18)
#define CMD23   (23)
#define ACMD23  (0x80+23)
#define CMD24   (24)
#define CMD25   (25)
#define CMD32   (32)
#define CMD33   (33)
#define CMD38   (38)
#define CMD48   (48)
#define CMD49   (49)
#define CMD55   (55)
#define CMD58   (58)

static BYTE xchg_spi(BYTE dat) {
	SPDR = dat;
	while (!(SPSR & (1 << SPIF)));  // Wait for transfer to complete
	return SPDR;
}

static void rcvr_spi_multi(BYTE *p, UINT cnt) {
	do {
		SPDR = 0xFF;
		while (!(SPSR & (1 << SPIF)));
		*p++ = SPDR;
		SPDR = 0xFF;
		while (!(SPSR & (1 << SPIF)));
		*p++ = SPDR;
	} while (cnt -= 2);
}

static void xmit_spi_multi(const BYTE *p, UINT cnt) {
	do {
		SPDR = *p++;
		while (!(SPSR & (1 << SPIF)));
		SPDR = *p++;
		while (!(SPSR & (1 << SPIF)));
	} while (cnt -= 2);
}
